<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- CHAINE DE CONFIGURATION VITALE -->
    <string name="app_name">mamoyenne</string>
    <string name="action_settings">Settings</string>

    <!-- PRESENTATION FRAGMENT -->
    <string name="title_Application"><b>Introduction</b></string>
    <string name="matiere">Discipline</string>
    <string name="notes">Notes</string>
    <string name="moy">Averages</string>
    <string name="titleNewMatiere"><h2>New Discipline</h2></string>
    <string name="titleNewNote"><h2>New Note</h2></string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="average">GENERAL AVERAGE</string>
    <string name="title_table_update_coef">Coefficient</string>
    <string name="title_table_update_bt_update">Update</string>
    <string name="title_table_update_bt_delete">Delete</string>
    <string name="description_Application">
        Moyenne Project is an application who can manage your disciplines and notes.\n\n
        You can add, modify and delete disciplines and notes.\n
        You can get general average or average by disciplines.\n\n
        If you want to reset your table, a button "Delete all" can do this for you.\n
    </string>
    <string name="deleteall"><h2>Delete all</h2></string>

    <!-- FORMULAIRE MATIERES FRAGMENT -->
    <string name="name_matiere">Name discipline</string>
    <string name="update_matiere">Update discipline</string>
    <!-- FORMULAIRE NOTES FRAGMENT -->
    <string name="title_table_update_value_note">Note</string>
    <string name="choose_matiere">Choose discipline :</string>
    <string name="interval_note">Note  0 - 20 </string>
    <!-- ... FRAGMENT -->

</resources>
