<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/fragmentformaddmatierefragment"
tools:context="navi.project.FormAddMatiereFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|bottom">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_nameMat"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="41dp"
            android:layout_marginEnd="41dp"
            android:layout_marginTop="93dp"
            android:width="100dp"
            android:singleLine="true"
            android:hint="@string/name_matiere" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_coefMat"
            android:width="100dp"
            android:hint="@string/title_table_update_coef"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:layout_alignLeft="@+id/et_nameMat"
            android:layout_alignStart="@+id/et_nameMat" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btSaveMatiere"
            style="@style/custom_bt_save"
            android:layout_marginTop="61dp"
            android:layout_below="@+id/et_coefMat"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:id="@+id/btDeleteMatiere"
            style="@style/custom_bt_supr_red"
            android:layout_marginTop="45dp"
            android:layout_below="@+id/btSaveMatiere"
            android:layout_alignLeft="@+id/btSaveMatiere"
            android:layout_alignStart="@+id/btSaveMatiere"
            android:layout_alignRight="@+id/btSaveMatiere"
            android:layout_alignEnd="@+id/btSaveMatiere" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/update_matiere"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_marginTop="39dp"
            android:layout_alignLeft="@+id/et_nameMat"
            android:layout_alignStart="@+id/et_nameMat"
            android:width="220dp"
            android:layout_marginLeft="-25dp" />

    </RelativeLayout>
</FrameLayout>
